# vslam_ros

./: .clang-format  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  package.xml
src/vslam/: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/vslam/doc/lie_theory/: Reducing the uncertainty about the uncertainties, part 1_ Linear and nonlinear _ GTSAM.html  Reducing the uncertainty about the uncertainties, part 2_ Frames and manifolds _ GTSAM.html  Reducing the uncertainty about the uncertainties, part 3_ Adjoints and covariances _ GTSAM.html
src/vslam/doc/math/: Multi-Variable Chain Rule – Calculus Tutorials.html
src/vslam/include/vslam/: bundle_adjustment.h  core.h  descriptor_matching.h  direct.h  direct_icp.h  evaluation.h  features.h  keyframe_selection.h  keypoint_selection.h  loop_closure_detection.h  motion_model.h  odometry.h  pose_graph_optimization.h  pose_prediction.h  utils.h  vslam.h
src/vslam/script/: setup.py
src/vslam/script/experiments/: evaluate_direct_icp.py  keyframe_selection.py  robust_line_fit.py  show_tum.py
src/vslam/script/notebooks/: derivation_bivariate_loss.ipynb  derivation_rgbd_alignment.ipynb  derivation_rgbd_alignment_forward_compositional.ipynb  derivation_rgbd_alignment_inverse_compositional.ipynb
src/vslam/script/vslampy/: camera.py
src/vslam/scripts/: epipolar_lines.py
src/vslam/src/bundle_adjustment/: BundleAdjustment.cpp
src/vslam/src/core/: CMakeLists.txt  Feature2D.cpp  Feature2D.h  Frame.cpp  Frame.h  Point3D.cpp  Point3D.h  Pose.cpp  Pose.h  Trajectory.cpp  Trajectory.h  macros.h  random.cpp  random.h  types.h
src/vslam/src/descriptor_matching/: FeatureTracking.cpp  FeatureTrackingOcv.cpp  FeatureTrackingOcv.h  Matcher.cpp  Matcher.h  overlays.cpp  overlays.h
src/vslam/src/direct/: AlignmentRgb.cpp  AlignmentRgb.h  AlignmentRgbPoseGraph.cpp  AlignmentRgbPoseGraph.h  AlignmentRgbd.cpp  AlignmentRgbd.h  Loss.cpp  NormalEquations.h  Scaler.cpp  interpolate.h  jacobians.h  overlay.cpp  overlays.cpp
src/vslam/src/direct_icp/: DirectIcp.cpp  DirectIcp.h  Loss.h  Scaler.h
src/vslam/src/evaluation/: PlotTrajectory.cpp  PlotTrajectory.h  RelativePoseError.cpp  RelativePoseError.h  tum.cpp  tum.h
src/vslam/src/feature_tracking/: FeatureSelection.cpp  FeatureSelection.h  FeatureTracking.cpp  FeatureTracking.h  FeatureTrackingOcv.cpp  FeatureTrackingOcv.h  Matcher.cpp  Matcher.h  OverlayCorrespondences.cpp  OverlayCorrespondences.h  OverlayFeatures.cpp  OverlayFeatures.h  OverlayMatchCandidates.cpp  OverlayMatchCandidates.h
src/vslam/src/features/: FeatureSelection.cpp  FeatureSelection.h  FeatureTracking.h  keypoint_selection.cpp  keypoint_selection.h  overlays.cpp  overlays.h
src/vslam/src/kalman/: CMakeLists.txt
src/vslam/src/keyframe_selection/: DifferentialEntropy.cpp  DifferentialEntropy.h
src/vslam/src/keypoint_selection/: keypoint_selection.cpp  keypoint_selection.h
src/vslam/src/least_squares/: CMakeLists.txt
src/vslam/src/loop_closure_detection/: CandidateProposal.cpp  CandidateProposal.h  DifferentialEntropy.cpp  DifferentialEntropy.h  LoopClosureDetection.cpp  LoopClosureDetection.h
src/vslam/src/lukas_kanade/: CMakeLists.txt  README.md
src/vslam/src/mapping/: BundleAdjustment.cpp  BundleAdjustment.h  KeyFrameSelection.cpp  KeyFrameSelection.h  Map.cpp  Map.h  OverlayFeatureDisplacement.cpp  OverlayFeatureDisplacement.h
src/vslam/src/motion_model/: ConstantVelocityModel.cpp  ConstantVelocityModel.h  EKFConstantVelocitySE3.cpp  EKFConstantVelocitySE3.h  KalmanFilter.h  MotionModel.cpp  MotionModel.h  PlotKalman.cpp  PlotKalman.h
src/vslam/src/odometry/: AlignmentRgb.cpp  AlignmentRgb.h  AlignmentRgbd.cpp  AlignmentRgbd.h  CMakeLists.txt  NormalEquations.cpp  NormalEquations.h  README.md  interpolate.h  weights.h
src/vslam/src/pose_graph_optimization/: PoseGraph.cpp  PoseGraphOptimizer.cpp  PoseGraphOptimizer.h
src/vslam/src/pose_prediction/: ConstantVelocityModel.cpp  ConstantVelocityModel.h  EKFConstantVelocitySE3.cpp  EKFConstantVelocitySE3.h  PlotKalman.cpp  PlotKalman.h
src/vslam/src/utils/: CMakeLists.txt  log.cpp  log.h  utils.cpp  utils.h  visuals.cpp  visuals.h
src/vslam/test/: experiment_keyframing.cpp  main_tum.cpp  test_ba.cpp  test_camera.cpp  test_ceres_ba.cpp  test_ekf_se3.cpp  test_frame.cpp  test_frame2.cpp  test_lukas_kanade_flow.cpp  test_lukas_kanade_se3.cpp  test_map.cpp  test_motion_model.cpp  test_random.cpp  test_rgbd_alignment.cpp  test_rpe.cpp  test_track_and_optimize.cpp  test_tracking.cpp  test_trajectory.cpp  test_warp.cpp
src/vslam/test/bundle_adjustment/: CMakeLists.txt  multiframe_alignment.cpp  multiframe_alignment_.cpp  multiframe_alignment__.cpp  multiframe_alignment___.cpp  overlays.h  rgb_pose_graph.cpp  rgb_pose_graph_single_frame.cpp  rgbd_odometry_local_map.cpp  test_ba.cpp
src/vslam/test/core/: test_algorithm.cpp  test_camera.cpp  test_frame.cpp  test_random.cpp  test_trajectory.cpp
src/vslam/test/descriptor_matching/: CMakeLists.txt  overlays.cpp  (+5 more)
src/vslam/tools/: Macros.cmake  vslamConfig.cmake.in
vslam_ros/: CMakeLists.txt  package.xml
vslam_ros/config/: RgbdAlignmentNode.yaml
vslam_ros/include/vslam_ros/: Queue.h  approximate_time_synchronizer.h  converters.h  vslam_ros.h
vslam_ros/src/ros/: Queue.cpp  converter.cpp  converters.h  lukas_kanade_se3_node.cpp  stereo_vo_node.cpp
vslam_ros_evaluation/: CMakeLists.txt  package.xml
vslam_ros_evaluation/config/: replayer.yaml  resultWriter.yaml
vslam_ros_evaluation/launch/: evaluation.launch.py
vslam_ros_evaluation/script/: evaluate.py
vslam_ros_evaluation/script/plot/: plot_traj.py
vslam_ros_evaluation/script/tum/: estimate_distribution.py  evaluate_ate.py  evaluate_rpe.py
vslam_ros_evaluation/src/: NodeGtLoader.cpp  NodeGtLoader.h  NodeReplayer.cpp  NodeReplayer.h  NodeResultWriter.cpp  NodeResultWriter.h  evaluation_app.cpp
vslam_ros_test/: CMakeLists.txt  package.xml
vslam_ros_test/src/: test_lukas_kanade_se3.cpp  test_lukas_kanade_se3_real.cpp  test_lukas_kanade_se3_synth.cpp
(+253 files in other folders)
